--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,6 @@
     tools:context=".MainActivity"
     tools:visibility="visible">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/Theme.FRCScouting.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.FRCScouting.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>
-
     <include
         android:id="@+id/include"
         layout="@layout/content_main" />
@@ -32,16 +17,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
-        android:fontFamily="monospace"
         android:text="@string/app_name"
-        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:typeface="normal"
         android:visibility="visible"
         app:layout_anchor="@+id/include"
-        app:layout_anchorGravity="center"
+        app:layout_anchorGravity="bottom|center"
         tools:text="@string/app_name"
         tools:visibility="visible" />
 
