--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,23 +12,14 @@
         android:id="@+id/include"
         layout="@layout/content_main" />
 
-    <TextView
-        android:id="@+id/ApplicationFooter"
+    <Button
+        android:id="@+id/Send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/app_name"
-        android:fontFamily="monospace"
-        android:lineSpacingExtra="8sp"
-        android:text="@string/app_name"
-        android:textAlignment="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:typeface="monospace"
+        android:text="I'm Done! Send My Data!"
         android:visibility="visible"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="bottom|center"
-        tools:text="@string/app_name"
         tools:visibility="visible" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
