--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -34,6 +34,17 @@
         app:layout_constraintTop_toTopOf="parent"
         android:importantForAutofill="no" />
 
+    <Button
+        android:id="@+id/teamNumberHelp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/Help"
+        app:layout_constraintStart_toEndOf="@+id/teamNumber"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="DuplicateSpeakableTextCheck" />
+
     <EditText
         android:id="@+id/matchNumber"
         android:layout_width="wrap_content"
@@ -49,5 +60,15 @@
         android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/matchNumberHelp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/Help"
+        app:layout_constraintStart_toEndOf="@+id/matchNumber"
+        app:layout_constraintTop_toBottomOf="@+id/teamNumberHelp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
