Update Package Names

--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DataEntryActivity">
+    tools:context="com.ibxcodecat.frc_scouting.DataEntryActivity">
 
     <LinearLayout
         android:id="@+id/layout"
