--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -20,7 +20,7 @@
 
     <EditText
         android:id="@+id/teamNumber"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/text_box_width"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
@@ -36,7 +36,7 @@
 
     <Button
         android:id="@+id/teamNumberHelp"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/help_button_width"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
@@ -47,7 +47,7 @@
 
     <EditText
         android:id="@+id/matchNumber"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/text_box_width"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="76dp"
@@ -63,7 +63,7 @@
 
     <Button
         android:id="@+id/matchNumberHelp"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/help_button_width"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
