--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -36,7 +36,7 @@
 
     <Button
         android:id="@+id/teamNumberHelp"
-        android:layout_width="@dimen/help_button_width"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
@@ -63,8 +63,7 @@
 
     <EditText
         android:id="@+id/matchNumber2"
-        android:layout_width="864px"
-        android:layout_height="128px"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="604dp"
         android:ems="10"
@@ -74,13 +73,13 @@
         android:minHeight="48dp"
         android:textColorHint="#757575"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/layout"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
 
     <Button
         android:id="@+id/matchNumberHelp2"
-        android:layout_width="@dimen/help_button_width"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
@@ -92,8 +91,6 @@
         android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="151px"
-        android:layout_marginEnd="125px"
         android:layout_marginBottom="16dp"
         android:text="@string/submit"
         android:visibility="visible"
@@ -104,7 +101,7 @@
 
     <Button
         android:id="@+id/matchNumberHelp"
-        android:layout_width="@dimen/help_button_width"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="604dp"
