--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -36,7 +36,7 @@
 
     <Button
         android:id="@+id/teamNumberHelp"
-        android:layout_width="@dimen/help_button_width"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
@@ -63,7 +63,7 @@
 
     <EditText
         android:id="@+id/matchNumber2"
-        android:layout_width="864px"
+        android:layout_width="832px"
         android:layout_height="128px"
         android:layout_marginStart="16dp"
         android:layout_marginTop="604dp"
@@ -80,7 +80,7 @@
 
     <Button
         android:id="@+id/matchNumberHelp2"
-        android:layout_width="@dimen/help_button_width"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="12dp"
@@ -104,7 +104,7 @@
 
     <Button
         android:id="@+id/matchNumberHelp"
-        android:layout_width="@dimen/help_button_width"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="604dp"
