--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -70,7 +70,7 @@
         android:ems="10"
         android:hint="@string/scouterTXT"
         android:importantForAutofill="no"
-        android:inputType="number"
+        android:inputType="text"
         android:minHeight="48dp"
         android:textColorHint="#757575"
         android:visibility="visible"
