--- a/app/src/main/res/layout/activity_submitted.xml
+++ b/app/src/main/res/layout/activity_submitted.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.ibxcodecat.frc_scouting.SubmittedActivity">
 
-    <TextView
-        android:id="@+id/you_did_the_thing"
+    <Button
+        android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="151dp"
-        android:layout_marginTop="356dp"
-        android:text="@string/submitted"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="16dp"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
