Replace Inputs With Dropdown Fields

--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -43,19 +43,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verticalDivider" />
 
-    <EditText
+    <View
+        android:id="@+id/horizontalDivider2"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="4dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/comments"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
         android:id="@+id/teamNumber"
         android:layout_width="@dimen/text_box_width"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="@string/teamNumberTXT"
-        android:importantForAutofill="no"
-        android:inputType="number"
-        android:minHeight="48dp"
-        android:textColorHint="#757575"
-        android:visibility="visible"
+        android:background="#00000000"
+        android:entries="@array/teams"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -70,19 +78,14 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
 
-    <EditText
+    <Spinner
         android:id="@+id/matchNumber"
         android:layout_width="@dimen/text_box_width"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="@string/matchNumberTXT"
-        android:importantForAutofill="no"
-        android:inputType="number"
-        android:minHeight="48dp"
-        android:textColorHint="#757575"
-        android:visibility="visible"
+        android:background="#00000000"
+        android:entries="@array/matches"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/teamNumber" />
 
@@ -98,31 +101,30 @@
         tools:ignore="TouchTargetSizeCheck" />
 
     <EditText
-        android:id="@+id/scoutedBy"
-        android:layout_width="144dp"
+        android:id="@+id/score"
+        android:layout_width="@dimen/text_box_width"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="@string/scouterTXT"
+        android:hint="@string/scoreTXT"
         android:importantForAutofill="no"
-        android:inputType="text"
+        android:inputType="number"
         android:minHeight="48dp"
         android:textColorHint="#757575"
         android:visibility="visible"
-        app:layout_constraintStart_toEndOf="@+id/scoreHelp"
-        app:layout_constraintTop_toBottomOf="@+id/taxiSelector"
-        tools:visibility="visible" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/matchNumber" />
 
     <Button
-        android:id="@+id/scoutedByHelp"
+        android:id="@+id/scoreHelp"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/Help"
-        app:layout_constraintStart_toEndOf="@+id/scoutedBy"
-        app:layout_constraintTop_toBottomOf="@+id/taxiHelp"
+        app:layout_constraintStart_toEndOf="@+id/score"
+        app:layout_constraintTop_toBottomOf="@+id/matchNumberHelp"
         tools:ignore="TouchTargetSizeCheck" />
 
     <ToggleButton
@@ -175,45 +177,32 @@
         tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
 
     <EditText
-        android:id="@+id/score"
-        android:layout_width="@dimen/text_box_width"
+        android:id="@+id/scoutedBy"
+        android:layout_width="144dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="@string/scoreTXT"
+        android:hint="@string/scouterTXT"
         android:importantForAutofill="no"
-        android:inputType="number"
+        android:inputType="text"
         android:minHeight="48dp"
         android:textColorHint="#757575"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/matchNumber" />
+        app:layout_constraintStart_toEndOf="@+id/scoreHelp"
+        app:layout_constraintTop_toBottomOf="@+id/taxiSelector"
+        tools:visibility="visible" />
 
     <Button
-        android:id="@+id/scoreHelp"
+        android:id="@+id/scoutedByHelp"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/Help"
-        app:layout_constraintStart_toEndOf="@+id/score"
-        app:layout_constraintTop_toBottomOf="@+id/matchNumberHelp"
+        app:layout_constraintStart_toEndOf="@+id/scoutedBy"
+        app:layout_constraintTop_toBottomOf="@+id/taxiHelp"
         tools:ignore="TouchTargetSizeCheck" />
-
-    <Button
-        android:id="@+id/submit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="125dp"
-        android:layout_marginEnd="125dp"
-        android:layout_marginBottom="16dp"
-        android:text="@string/submit"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:visibility="visible" />
 
     <EditText
         android:id="@+id/comments"
@@ -229,6 +218,20 @@
         android:textColorHint="#757575"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/submit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="125dp"
+        android:layout_marginEnd="125dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/submit"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:visibility="visible" />
